<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/activity_anm_form">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f1f1f1"
            android:orientation="vertical">

            <!--Heading-->
            <TextView android:id="@+id/textView2"
                style="@style/HeadingStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/heading_anm_visit1" />

            <!--subheading -  -->
            <TextView android:text="@string/subheading_anm_visit1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SubHeadingStyle" />

            <!--Date of Assessment -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView android:text="@string/category_anm_assessment_date"
                    style="@style/CategoryStyleANM1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingStart="4dp"
                    android:gravity="left"
                    tools:ignore="RtlHardcoded,RtlSymmetry">

                    <!--Date of profile creation -->
                    <TextView android:id="@+id/tv_anm_assessment_date"
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

            <!-- Input fields -->

            <!-- c11 category -->
            <CheckBox android:text="@string/anm_c11"
                android:id="@+id/cb_c11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>